<resources>
    <string name="app_name">TuCita</string>
    <string name="cancel">Cancel</string>
    <string name="save">Guardar</string>
    <string name="details">Detalles</string>
    <string name="bookings">Tus citas</string>
    <string name="action_settings">Settings</string>
    <string name="order_total">Total :</string>
    <string name="make_review">Califica este lugar!</string>
    <string name="i_hate_it">No me ha gustado nada</string>
    <string name="i_dont_like_it">No me ha gustado</string>
    <string name="title">Título</string>
    <string name="users">usuarios</string>
    <string name="ok">Está bien</string>
    <string name="review_by">Revisado por</string>
    <string name="send">ENVIAR</string>
    <string name="i_like_it">Me ha gustado</string>
    <string name="i_loved_it">Me ha encantado</string>
    <string name="edit">Editar</string>
    <string name="secure_checkout">Chequeo seguro</string>
    <string name="continue_option">Continuar</string>
    <string name="successful_transaction">Transacción Exitosa</string>
    <string name="all">Todos</string>
    <string name="others">Otros</string>
    <string name="yours">TUYA</string>
    <!-- Strings related to login -->
    <string name="facebook_app_id">1652265898354822</string>
    <string name="connect_with_facebook">Entra con Facebook</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_name">Nombre</string>
    <string name="action_sign_in">Iniciar sesion o registrarse</string>
    <string name="action_sign_up">Registrarme</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="action_sign_in_facebook">Iniciar sesion con Facebook</string>
    <string name="action_logout">Logout</string>
    <string name="action_contact_us">Contáctanos</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="create_new_account">Crear una cuenta</string>
    <string name="client_details">Detalles del cliente</string>
    <string name="venue_details">Detalles del Lugar</string>
    <string name="change_date">Cambiar fecha</string>
    <string name="place_order">Realizar pedido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="cities">Ciudades</string>
    <string name="categories">CATEGORÍAS</string>
    <string name="member_from">Miembro desde</string>
    <string name="action_search">Buscar</string>
    <string name="book_now">Reserva tu cita!</string>
    <string name="action_search_location">Ciudad</string>
    <string name="venues">Lugares</string>
    <string name="venue">Negocio</string>
    <string name="treatments">Tratamientos</string>
    <string name="of">de</string>
    <string name="recent_treatments">Tratamientos recientes</string>
    <string name="recent_venues">Lugares recientes</string>
    <string name="typing_advertisement">Escribe al menos 3 letras para conseguir sugerencias</string>
    <string name="near">Lugares cerca de tí</string>
    <string name="dont_remember_password"> <u>Olvido la contraseña?</u>.</string>
    <string name="sorry_there_are_no">Lo sentimos, no hay espacios disponibles para la fecha </string>
    <string name="pls_select_another_day">Por favor seleccione otro día</string>
    <string name="no_results">Sin resultados</string>
    <string name="error_finding_pinned_categories">Error finding pinned Categories:</string>
    <string name="error_pinning_categories">Error pinning Categories:</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">No hay conexión a internet</string>
    <string name="cant_place_order">Lo sentimos el espacio ya ha sido tomado</string>
    <string name="no_Location">No se pudo establecer la localizaciòn actual</string>
    <string name="alert">Alerta</string>
    <string name="services">Servicios</string>
    <string name="or">O</string>
    <!-- Strings related to parse -->
    <string name="load_from_parse">load from parse:</string>
    <string name="app_parse_id">EazCp42Fw4yJTEGCuZ9ofl75izJY7a49nw2xufH6</string>
    <string name="client_parse_id">Fr71FqI5chgnNWBbrDa6d9rhxo3PiL8pngM7MUt4</string>
    <string name="name">name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="find_service">Servicios que puedes estar buscando!</string>
    <string name="want_eVoucher">Lo quiero como eVoucher</string>
    <string name="fine_print">Letra pequeña</string>
    <string name="content_close">Imagen para cerrar</string>
    <string name="basket">Tu canasta</string>
    <string name="add_more_services">Mas servicios</string>
<!-- TODO: Venue -->
    <string name="closed">CERRADO</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miercoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sabado</string>
    <string name="sunday">Domingo</string>
    <string name="top_services">Servicios principales</string>
    <string name="from">Desde:</string>
    <string name="full_menu">Menú completo</string>
    <string name="opening_hours">Horario de trabajo</string>
    <string name="about">Acerca de</string>
    <string name="description">Descripción: \n</string>
    <string name="dialog_progress_title">Cargando...</string>
    <string name="dialog_all_progress_message">Espera mientras cargamos la información</string>
    <string name="dialog_advanced_search_progress_message">Espera mientras encontramos lugares cerca de tí</string>
    <string name="no_telephone">Falta el teléfono</string>
    <string name="prompt_telephone">Teléfono</string>
</resources>
