<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amtechventures.tucita.activities.venue.OpeningHoursFragment">


    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/radioButton1"
        android:layout_alignParentTop="true"
       />
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton1"
        />
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:id="@+id/radioButton3"
        android:layout_below="@+id/radioButton2"
        />
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:id="@+id/radioButton4"
        android:layout_below="@+id/radioButton3"
        />
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:id="@+id/radioButton5"
        android:layout_below="@+id/radioButton4"
       />
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:id="@+id/radioButton6"
        android:layout_below="@+id/radioButton5"
       />
    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:id="@+id/radioButton7"
        android:layout_below="@+id/radioButton6"
        />

</RelativeLayout>
