<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.amtechventures.tucita.activities.venue.VenueActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <fragment
    android:id="@+id/review"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:name="com.amtechventures.tucita.activities.venue.ReviewFragment">

    </fragment>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/top_services"
                android:layout_height="35dp"
                android:textSize="25sp"
                android:background="@color/com_facebook_button_login_silver_background_color"
                             />
    <fragment
        android:id="@+id/top_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.amtechventures.tucita.activities.venue.TopServicesFragment">

    </fragment>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/full_menu"
                android:layout_height="35dp"
                android:textSize="25sp"
                android:background="@color/com_facebook_button_login_silver_background_color"
                />
            <fragment
                android:id="@+id/full_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:name="com.amtechventures.tucita.activities.venue.FullMenuFragment">

            </fragment>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/about"
                android:layout_height="35dp"
                android:textSize="25sp"
                android:background="@color/com_facebook_button_login_silver_background_color"
                />
            <fragment
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:name="com.amtechventures.tucita.activities.venue.AboutFragment">

            </fragment>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/opening_hours"
                android:layout_height="35dp"
                android:textSize="25sp"
                android:background="@color/com_facebook_button_login_silver_background_color"
                />
            <fragment
                android:id="@+id/opening_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:name="com.amtechventures.tucita.activities.venue.OpeningHoursFragment">
            </fragment>
        </LinearLayout>
</ScrollView>

