<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.amtechventures.tucita.activities.user.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="@dimen/high_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_marginBottom="18dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:id="@+id/close"
            android:layout_weight="1"
            android:onClick="close"
            android:layout_height="35dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:id="@+id/loginTitle"
            android:layout_weight="9"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/inputEmail"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="@dimen/high_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/inputPassword"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="@dimen/high_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_marginBottom="19dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prompt_password"
            android:imeActionId="123"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="login"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="@dimen/high_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/forgiven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/blue_link"
            android:text="@string/dont_remember_password" />

        <TextView
            android:id="@+id/newAccount"
            android:layout_width="152dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:onClick="signup"
            android:text="@string/create_new_account"
            android:textColor="@color/blue_link" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="22.5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginRight="@dimen/high_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@color/or_color" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:textColor="@color/or_color"
            android:text="@string/or"
            android:gravity="center_horizontal" />

        <View
            android:id="@+id/separator2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="9dp"
            android:layout_weight="1"
            android:background="@color/or_color" />
    </LinearLayout>

    <Button
        android:id="@+id/facebook_button"
        android:onClick="loginWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="17sp"
        android:layout_marginBottom="@dimen/high_margin"
        android:text="@string/action_sign_in_facebook"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/or_color" />

</LinearLayout>