<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.amtechventures.tucita.utils.views.AppointmentView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appointment"/>
        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewServices"
            android:indicatorLeft="294dp"
            android:indicatorRight="329dp"
            android:foregroundGravity="bottom"
            />
        <com.amtechventures.tucita.utils.views.AppTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="@dimen/high_margin"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/high_margin"
            android:paddingRight="@dimen/high_margin"
            app:bold="true"
            android:paddingEnd="@dimen/high_margin"
            android:id="@+id/details"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/venue_details"/>
        <com.amtechventures.tucita.utils.views.AppTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:id="@+id/watch_location"
            android:drawableLeft="@drawable/pinfull_icon"
           />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/com_facebook_button_login_silver_background_color"
            android:padding="@dimen/high_margin">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <com.amtechventures.tucita.utils.views.AppTextView
                    android:layout_width="match_parent"
                    app:bold="true"
                    app:light="false"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:textColor="@color/colorAccentText"
                    android:id="@+id/total"
                    android:text="@string/order_total"/>
                <com.amtechventures.tucita.utils.views.AppTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPrice"
                    />
            </LinearLayout>
            <com.amtechventures.tucita.utils.views.AppTextView
                android:layout_width="120dp"
                android:layout_height="39dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="@dimen/high_margin"
                app:bold="true"
                android:background="@drawable/normal"
                android:layout_marginStart="@dimen/high_margin"
                android:id="@+id/changeDate"
                android:text="@string/change_date"/>
        </RelativeLayout>
    </LinearLayout></ScrollView>