<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="520dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:id="@+id/up">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/frames"
        android:gravity="center_horizontal"
        android:layout_gravity="top|center_horizontal"
        android:background="@android:color/transparent">
    <com.mikhaellopez.circularimageview.CircularImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/imageUser"
        android:gravity="top"
        android:padding="5dp"
        app:border_width="2dp"
        app:shadow="true"
        app:shadow_radius="1"
        android:src="@drawable/user_icon"
        app:civ_border_color="@color/colorAccent"
        />
    </RelativeLayout>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom|center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="bottom"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:id="@+id/textName"/>

    </android.support.design.widget.AppBarLayout>
    </FrameLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="325dp"
    android:layout_below="@+id/up"
    android:background="@android:color/white">
    <com.amtechventures.tucita.utils.views.RatingView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingView"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTitleLayout"
        android:layout_marginLeft="@dimen/high_margin"
        android:layout_marginStart="@dimen/high_margin"
        android:layout_marginRight="@dimen/high_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_below="@+id/ratingView">

        <com.amtechventures.tucita.utils.views.AppEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/title_icon"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/description"
           />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/textDescriptionLayout"
        android:layout_marginLeft="@dimen/high_margin"
        android:layout_marginStart="@dimen/high_margin"
        android:layout_marginRight="@dimen/high_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_below="@+id/textTitleLayout">

        <com.amtechventures.tucita.utils.views.AppEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/description_icon"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            />

    </android.support.design.widget.TextInputLayout>
    <com.amtechventures.tucita.utils.views.AppTextView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:textColor="@android:color/white"
        android:text="@string/send"
        app:bold="true"
        android:id="@+id/send"
        android:gravity="center"
        android:background="@drawable/normal"
       android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="31dp"
        />
</RelativeLayout>
</RelativeLayout>

